<resources>
    <string name="app_name">WeatherApp</string>
    <string name="search">Search</string>
    <string name="temperature_c">%.2f °C</string>
    <string name="temperature_f">%.2f °F</string>
    <string name="feels_like_c">Feels like: %.2f °C</string>
    <string name="min_temp_c">Min temp: %.2f °C</string>
    <string name="max_temp_c">Max temp: %.2f °C</string>
    <string name="feels_like_f">Feels like: %.2f °F</string>
    <string name="min_temp_f">Min temp: %.2f °F</string>
    <string name="max_temp_f">Max temp: %.2f °F</string>
    <string name="humidity_title">Humidity: %d%%</string>
    <string name="visibility_title">Visibility: %d m</string>
    <string name="wind_speed_title">Wind Speed: %.2f m/s</string>
    <string name="country_title">Country: %s</string>
    <string name="last_update">Last Sync(Local): %s</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>
    <string name="latitude_title">Latitude: %s</string>
    <string name="longitude_title">Longitude: %s</string>
    <string name="address_title">Address: %s</string>
    <string name="hh_mm_ss_dd_mm_yyyy">HH:mm:ss | dd/MM/yyyy</string>
    <string name="dc">--°C</string>
    <string name="feels_like_dc">Feels like: ----</string>
    <string name="min_temp_dc">Min temp: ----</string>
    <string name="max_temp_dc">Max temp: ----</string>
    <string name="humidity_percentage">Humidity: ----</string>
    <string name="visibility_m">Visibility: ----</string>
    <string name="wind_speed_m_s">Wind speed: ----</string>
    <string name="latitude">Latitude: ---</string>
    <string name="longitude">Longitude: ---</string>
    <string name="empty" />
    <string name="country">Country: ----</string>
    <string name="last_update_in_local_00_00_pm">Last update in local: ----</string>
    <string name="sunrise_00_00_am">Sunrise: 00:00 AM</string>
    <string name="sunset_00_00_pm">Sunset: 00:00 PM</string>
    <string name="access_to_the_location_permission_message">This app requires access to your device\'s location to provide weather information based on your current location. If you denied access to location and you changed your mind please go to App info, choose permissions, and then grant access to the location permission.</string>
    <string name="city_name">City Name</string>
    <string name="c_f">C|F</string>
    <string name="title_dc">°C</string>
    <string name="title_df">°F</string>
    <string name="title_feels_like_c">Feels like: ----°C</string>
    <string name="title_min_temp_c">Min temp: ----°C</string>
    <string name="title_max_temp_c">Max temp: ----°C</string>
    <string name="title_humidity">Humidity: ---- %</string>
    <string name="title_visibility_m">Visibility: ---- m</string>
    <string name="title_wind_speed_m_s">Wind speed: ---- m/s</string>
    <string name="title_last_update_in_local_00_00_pm">Last Sync(Local): 00:00 PM</string>
</resources>